# ft_algorithms

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: run_tests.yml
aux/: check.sh  format.sh
include/: ft_algorithms.h  ft_predicates.h
src/: all_any_none.c  map.c  sort.c
src/predicates/: int1.c  int2.c
test/: CMakeLists.txt  fetch_gtest.cmake
test/src/: all_any_none.cpp  allocation.c  is_sorted.c  is_sorted.cpp  main.c  main.cpp  map.cpp  sort.c  sort.cpp
